# genai-2026

./: .env.example  .gitignore  DEPLOY.md  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  tech-doc.md
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: chat_stream.py  config.py  dependencies.py  geocode.py  llm_client.py  main.py  profile_aggregator.py  prompt_builder.py  schemas.py
backend/app/cache/: cache_keys.py  context_store.py  redis_client.py
backend/app/datasources/: base.py  feature_extractors.py  osm_normalizer.py  overpass.py  registry.py
backend/tests/: conftest.py  test_api.py  test_cache_keys.py  test_chat_stream.py  test_context_store.py  test_feature_extractors.py  test_llm_client.py  test_osm_normalizer.py  test_overpass_datasource.py  test_profile_aggregator.py  test_prompt_builder.py  test_registry.py
frontend/: .env.template  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  google-maps.d.ts  index.css  store.ts  types.ts  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/chat/: ChatPanel.tsx  index.ts
frontend/src/components/: index.ts
frontend/src/components/landing/: AddressAutocomplete.tsx  (+1 more)
frontend/src/ds/: icons.tsx  index.ts  tokens.ts
frontend/src/map/: MapView.tsx  geo.ts  index.ts
frontend/src/pages/: MapPage.tsx
frontend/src/routes/: __root.tsx  index.tsx  map.tsx
frontend/src/storage/: index.ts
nginx/: default.conf  production.conf
redis/: redis.conf
