[project]
name = "geodata-backend"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.135.1",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "httpx==0.28.1",
    "redis==7.3.0",
    "sse-starlette==3.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.6",
]
